[package]
name = "craft"
version = "0.1.0"
edition = "2021"

[dependencies]
# ocaml = {git = "https://github.com/zshipko/ocaml-rs"}
ocaml = {version = "1.0.0"}

[build-dependencies]
# for calling ocaml from rust: ocaml-build = {git = "https://github.com/zshipko/ocaml-rs", features=["dune"]}
ocaml-build = {version = "^1.0.0"}

[lib]
crate-type = ["staticlib", "cdylib"]

[features]
vmtrace = []
