[package]
name = "craft"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
env_logger = "0.11.8"
log = "0.4.27"
# ocaml = {git = "https://github.com/zshipko/ocaml-rs"}
ocaml = {version = "1.0.0"}
once_cell = "1.21.3"

[build-dependencies]
# for calling ocaml from rust: ocaml-build = {git = "https://github.com/zshipko/ocaml-rs", features=["dune"]}
ocaml-build = {version = "^1.0.0"}

[lib]
crate-type = ["staticlib", "cdylib"]

[features]
